<resources>
    <string name="app_name">Taxi</string>
    <string name="driverBtn">Я водитель</string>
    <string name="customerBtn">Я клиент</string>
    <string name="email">abc@mail.ru</string>
    <string name="password">******</string>
    <string name="exit">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="driverStatus">Вход для водителя</string>
    <string name="accCreate">Еще нет аккаунта?</string>
    <string name="customerStatus">Вход для клинта</string>
    <string name="title_activity_driver_maps">DriverMapsActivity</string>
    <string name="title_activity_custmers_map">CustmersMapActivity</string>
</resources>