<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome"
    tools:context=".CustomerRegLog">

    <EditText
        android:id="@+id/customerEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/statusCustomer"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/customerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/customerEmail"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/signInCustomer"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/customerPassword"
        android:background="@android:color/holo_green_light"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="italic"
        android:text="@string/exit"/>

    <Button
        android:id="@+id/signUpCustomer"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/signInCustomer"
        android:background="@android:color/holo_red_light"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="italic"
        android:text="@string/registration"/>

    <TextView
        android:id="@+id/statusCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customerStatus"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:layout_marginTop="200dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/accCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accCreate"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/signInCustomer"
        android:layout_marginTop="5dp"
        />

</RelativeLayout>